neutralize table defaults set main table width to 100%

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
         <!-- need to actually generate all html here -->
         <div id="emailhtml">
             <h2 style="font-family: sans-serif;">Upcoming Shows</h2>
-            <table style="font-family: sans-serif;">
+            <table style="font-family: sans-serif;" cellspacing="0" cellpadding="0" border="0" width="100%">
 
                 <thead>
                     <th>Date</th>
