Add a step to directions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
         <ol>
             <li>Select All, and copy all code from box below to clipboard.</li>
             <li>Paste it into the fanbridge.com html email source where you want the event listing to go.  It was at bottom in screencast.</li>
+            <li>Refresh this page for updated list at any time.  Then go and repeat steps one and two to update your email.</li>
         </ol>
         <textarea id="copyme">Loading Events ...</textarea>
 
