Align header titles to the left

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,10 +35,10 @@
             <table style="font-family: sans-serif;" cellspacing="0" cellpadding="0" border="0" width="100%">
 
                 <thead>
-                    <th>Date</th>
-                    <th>Venue</th>
-                    <th>Location</th>
-                    <th>Tickets</th>
+                    <th width="100" align="left">Date</th>
+                    <th width="300" align="left">Venue</th>
+                    <th width="230" align="left">Location</th>
+                    <th width="100" align="left">Tickets</th>
                 </thead>
 
                 <tbody></tbody>
